--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -12,7 +12,7 @@
 }
 
 .blog-show-content {
-	font-size: 20px;
+	font-size: 15px;
 }
 
 .blog-show-flexbox {
@@ -51,4 +51,10 @@
 
 .comment-deletebt {
 	color: red;
+}
+
+.url-style {
+	font-size: 10px;
+	text-align: left;
+	width: 100%;
 }
