--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -12,7 +12,7 @@
 .top-img {
 	width: 100%;
 	height: 90vh;
-	background-image: url(karen-lau-z_S5m-dqADA-unsplash.jpg);
+	background-image: image-url("karen-lau-z_S5m-dqADA-unsplash.jpg");
 	background-size: 100% 100%;
 }
 
@@ -38,7 +38,7 @@
 .about-img {
 	width: 100%;
 	height: 90vh;
-	background-image: url(clyde-rs-4XbZCfU2Uoo-unsplash.jpg);
+	background-image: image-url("clyde-rs-4XbZCfU2Uoo-unsplash.jpg");
 	background-size: 100% 100%;
 }
 
