--- a/app/assets/stylesheets/favorites.scss
+++ b/app/assets/stylesheets/favorites.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the Favorites controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.favorite-title {
+	color: red;
+	font-size: 15px;
+}
+
+.favorite-body {
+	font-size: 20px;
+}
+
+.favorite-index-title {
+	color: #ff82b2;
+	font-size: 30px;
+	font-family: 'ヒラギノ角ゴシック','Hiragino Sans',sans-serif;
+}
