--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,20 +1,23 @@
 <div class="about-img">
 	<div class="container">
 	<div class="row">
-		<div class="col-md-8 col-md-offset-2">
 		<div class="about-box">
 			<div class="about-body">
-				<h1 class="about-title">About</h1>
+				<div class="about-title">Healingの趣旨</div>
 					<div class="about-content">
-						ファミリー向けの動物園などに行きにくい<br>
-						または、行くのが面倒くさい人向け、動物に癒されるお店紹介サイト！<br>
-						都会の喧騒に疲れていませんか？<br>
+						都会の喧騒に疲れてしまい、癒されたい...<br>
+						でも、ファミリー向けの動物園に行きにくい人<br>
+						遠出するのが面倒くさい人<br>
 						そんなあなたに見てもらいたい！<br>
-						そして、癒やしの場所を教え合いましょう！<br>
+						このサイトは、<br>
+						都内で動物に会えるお店を紹介するサイトです！<br>
 					</div>
-					<p class="about-last">
+					<strong class="about-last">
 						動物から癒されたら、また明日から頑張りましょう！
-					</p>
+					</strong>
+
+					<div class="about-blog-index">
+						<%= link_to "投稿一覧", blogs_path, class: "btn btn-info" %>
 					</div>
 			</div>
 		</div>
