--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,14 +1,16 @@
 <div class="top-img">
 	<div class="container">
 		<div class="row">
-		<div class="top-box">
-			<div class="top-title">
-				<div class="top-font">
-					疲れていませんか<br>
-					動物たちに癒されに行きましょう
+			<div class="top-box">
+				<div class="top-title">
+					<%= link_to homes_about_path do %>
+					<div class="top-font-style">
+							疲れていませんか？<br>
+							動物たちに癒されに行きましょう
+					</div>
+					<% end %>
 				</div>
 			</div>
-		</div>
 		</div>
 	</div>
 </div>
