--- a/app/views/blogs/_search.html.erb
+++ b/app/views/blogs/_search.html.erb
@@ -1,15 +1,10 @@
-<table class='genre-search'>
-  <thead>
-    <tr>
-      <th>種類</th>
-    </tr>
-  </thead>
-  <!-- ジャンル毎に検索する -->
-  <tbody class="table-genres">
-    <% blog.genres.each do |genre| %>
-    <tr>
-      <td><%= link_to genre, blog_search_path(genre) %></td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
+  <div class="panel panel-info search-box">
+    <div class="panel-heading">
+      <div class="panel-genre-title">種類検索</div>
+    </div>
+    <div class="panel-body genre-panel-style">
+      <% Blog.genres.keys.each do |genre| %>
+          <%= link_to genre, blogs_search_path(genre: genre) %>
+      <% end %>
+    </div>
+  </div>
