--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -11,18 +11,6 @@
 
       	<%= form_for (@customer) do |f| %>
 
-      		<div class="pull-left">
-	      	<div class="field">
-	        <div class="panel-body">
-	      		<label class="control-label sr-only" for="inputEmail"></label>
-	        	<%= f.attachment_field :profile_image %>
-	        </div>
-         	</div>
-         	</div>
-
-
-	      	<div class="pull-right">
-
 			    <div class="field">
 			    <div class="panel-body">
 			        <%= f.label :name, "名前" %><br>
@@ -37,14 +25,29 @@
 	            </div>
 	            </div>
 
+	            <div class="field">
+		        <div class="panel-body">
+		      		<label class="control-label sr-only" for="inputEmail"></label>
+		        	<%= f.attachment_field :profile_image %>
+		        </div>
+	         	</div>
+
 		        <div class="submit-btn">
 		       	<div class="panel-body">
 		       		<ul>
-		           		<li><%= f.submit "保存", class: "btn btn-success" %></li>
 		           		<li><%= link_to "パスワード変更", edit_customer_registration_path,  class: "btn btn-info" %></li>
 		           	</ul>
 		       	</div>
 		        </div>
+
+		        <div class="submit-btn">
+		       	<div class="panel-body">
+		       		<ul>
+		           		<li><%= f.submit "保存", class: "btn btn-success" %></li>
+		           	</ul>
+		       	</div>
+		        </div>
+
 
 		         <div class="submit-btn">
 		         <div class="panel-body">
@@ -54,7 +57,6 @@
 		        </div>
 		        </div>
 
-		      </div>
 	    <% end %>
 
   		</div>
