--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -3,19 +3,36 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
 
-  <table class='table'>
+  <table class='table table-hover table-inverse'>
     <tbody>
+      <tr class="my-customer">
+          <td><span class="glyphicon glyphicon-user" aria-hidden="true"></span>My</td>
+          <td><%= attachment_image_tag @customer, :profile_image, size: "60x60", fallback: "hans-jurgen-mager-Fbdr6gXJBVY-unsplash",class: "profile-image-style" %></td>
+          <td class="name-style">
+            <%= link_to customer_path(@customer) do %>
+              <%= @customer.name %>
+            <% end %>
+          </td>
+      </tr>
+
       <% @customers.each do |customer| %>
-      <% if customer.is_deleted == false %>
-        <tr>
-          <td><%= attachment_image_tag customer, :profile_image, size: "60x60", fallback: "hans-jurgen-mager-Fbdr6gXJBVY-unsplash",class: "profile-image-style" %></td>
-          <td class="name-style"><%= customer.name %></td>
-          <td class="name-style"><%= link_to '詳細', customer, class: "customer_#{customer.id}" %></td>
-        </tr>
+        <% if customer.is_deleted == false && customer != current_customer %>
+          <tr>
+            <td></td>
+            <td><%= attachment_image_tag customer, :profile_image, size: "60x60", fallback: "hans-jurgen-mager-Fbdr6gXJBVY-unsplash",class: "profile-image-style" %></td>
+            <td class="name-style">
+              <%= link_to customer do %>
+                <%= customer.name %>
+              <% end %>
+            </td>
+          </tr>
         <% end %>
       <% end %>
     </tbody>
-</table>
+  </table>
+    <div class="paginate-style">
+      <%= paginate @customers %>
+    </div>
 
 </div>
 </div>
