--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,14 +1,14 @@
 <% if resource.errors.any? %>
   <div id="error_explanation">
-    <h2 class="sign-error-title">
-      <%= I18n.t("errors.messages.not_saved",
+    <strong class="error-style">
+      ※ <%= I18n.t("errors.messages.not_saved",
                  count: resource.errors.count,
                  resource: resource.class.model_name.human.downcase)
        %>
-    </h2>
+    </strong>
     <ul>
       <% resource.errors.full_messages.each do |message| %>
-        <li class="sign-error-content"><%= message %></li>
+        <li class="error-style"><%= message %></li>
       <% end %>
     </ul>
   </div>
