--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,6 +22,7 @@
         <% else %>
           <li class="nav_list"><%= link_to 'Top', root_path, class: 'glyphicon glyphicon-tree-conifer' %></li>
           <li class="nav_list"><%= link_to 'About', homes_about_path, class: 'glyphicon glyphicon-globe' %></li>
+          <li class="nav_list"><%= link_to '投稿一覧', blogs_path, class: 'glyphicon glyphicon-music'%></li>
           <li class="nav_list"><%= link_to '新規会員登録', new_customer_registration_path, class: 'glyphicon glyphicon-pencil' %></li>
           <li class="nav_list"><%= link_to 'ログイン', new_customer_session_path , class: 'glyphicon glyphicon-pushpin'%></li>
         <% end %>
