--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -51,8 +51,13 @@
 
 		         <div class="submit-btn">
 		         <div class="panel-body">
-		            <% if customer_signed_in? && @customer.id == current_customer.id %>
-		        		<%= link_to "退会", customers_hide_path(current_customer), method: :put, "data-confirm" => "本当に退会しますか？", class: "btn btn-danger" %>
+		            <% if customer_signed_in? %>
+		        		<% if current_customer.admin == false && @customer.id == current_customer.id %>
+		        			<%= link_to "退会", customers_hide_path(@customer), method: :put, "data-confirm" => "本当に退会しますか？", class: "btn btn-danger" %>
+		        		<% elsif current_customer.admin != false && @customer.id != current_customer.id %>
+		        			<%= link_to "強制退会", customers_hide_path(@customer), method: :put, "data-confirm" => "本当に退会させますか？", class: "btn btn-danger" %>
+
+		        		<% end %>
 					<% end %>
 		        </div>
 		        </div>
