--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -2,7 +2,6 @@
 <div class="container">
 <div class="row">
 
-  <!-- <div class="col-xs-3 text-center"> -->
     <div class="panel">
     	<div class="flex-favorite-content">
 
@@ -13,12 +12,14 @@
 			        </div>
 	         	</div>
 
-	         	<div class="field">
-	         		<div class="panel-body">
-	         			<div class="panel-title-customershow"><%= @customer.name %></div>
-			        	<%= link_to "編集", edit_customer_path(@customer.id), class: "btn btn-success" %>
-			        </div>
-			    </div>
+	         	<% if @customer == current_customer || current_customer.admin? %>
+		         	<div class="field">
+		         		<div class="panel-body">
+		         			<div class="panel-title-customershow"><%= @customer.name %></div>
+				        	<%= link_to "編集", edit_customer_path(@customer.id), class: "btn btn-success" %>
+				        </div>
+				    </div>
+				<% end %>
 
 			</div>
 		</div>
@@ -31,39 +32,29 @@
 	<% end %>
 
 
+	<h3 class="myblog">投稿したお店</h3>
+	<div class="flex-blog">
+      <% @blogs.each do |blog| %>
+	      <div class="flex-blog-content">
 
+	      	<% if blog.blog_images.present? %>
+	      		<div class="b">
+					<% blog.blog_images.each do |image| %>
+						<%= attachment_image_tag image, :photo, class: "blog-photo-index" %>
+					<% end %>
+				</div>
+			<% else %>
+				 <%= image_tag 'IMG_2667 2.jpeg', class: "blog-photo-index" %>
+			<% end %>
 
+			<%= link_to blog_path(blog) do %>
+				<div class="index-blog-title"><%= blog.title %></div>
+			    <div class="index-blog-address"><%= blog.address %></div>
+			<% end %>
 
-   <!-- </div> -->
-
-
-	<!-- <div class="col-xs-9 text-center"> -->
-		<h3 class="myblog">投稿したお店</h3>
-		<div class="flex-blog">
-	      <% @blogs.each do |blog| %>
-		      <div class="flex-blog-content">
-
-		      	<% if blog.blog_images.present? %>
-		      		<div class="b">
-						<% blog.blog_images.each do |image| %>
-							<%= attachment_image_tag image, :photo, class: "blog-photo-index" %>
-						<% end %>
-					</div>
-				<% else %>
-					 <%= image_tag 'IMG_2667 2.jpeg', class: "blog-photo-index" %>
-				<% end %>
-
-				<%= link_to blog_path(blog) do %>
-					<div class="index-blog-title"><%= blog.title %></div>
-				    <div class="index-blog-address"><%= blog.address %></div>
-				<% end %>
-
-		      </div>
-	      <% end %>
-	    </div>
-
-
-	<!-- </div> -->
+	      </div>
+      <% end %>
+    </div>
 
 </div>
 </div>
