--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -17,7 +17,8 @@
 					</strong>
 
 					<div class="about-blog-index">
-						<%= link_to "投稿一覧", blogs_path, class: "btn btn-info" %>
+						<%= link_to "投稿を見る", blogs_path, class: "btn btn-info" %>
+						<%= link_to "会員登録する", new_customer_registration_path, class: "btn btn-danger" %>
 					</div>
 			</div>
 		</div>
