--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -96,6 +96,21 @@ ul {
   width: 90%;
 }
 
+.top-img {
+  width: 100%;
+  height: 100vh;
+  background-image: image-url("liam-burnett-blue--qwEUsg7UbI-unsplash.jpg");
+  background-size: 100% 100%;
+}
+
+.top-font-style {
+  text-align: center;
+  font-size: 18px;
+  color: blue;
+  font-family: 'ヒラギノ明朝 ProN','Hiragino Mincho ProN',sans-serif;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
 .about-img {
   width: 100%;
   height: 100vh;
