--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -8,7 +8,7 @@
 	      	<div class="flex-favorite-box">
 	      		<div class="field">
 			        <div class="panel-body">
-			      		<%= attachment_image_tag @customer, :profile_image, size: "70x70", fallback: "hans-jurgen-mager-Fbdr6gXJBVY-unsplash", class: "profile-image-style" %><br>
+			      		<%= attachment_image_tag @customer, :profile_image, size: "70x70", fallback: "hans-jurgen-mager-Fbdr6gXJBVY-unsplash.jpg", class: "profile-image-style" %><br>
 			        </div>
 	         	</div>
 
