--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -9,7 +9,7 @@
 			<% end %>
 		</div>
 	<% else %>
-		<%= image_tag 'IMG_2667 2.jpeg', class: "blog-photo-show" %>
+		<%= image_tag 'IMG_2667_2.jpeg', class: "blog-photo-show" %>
 	<% end %>
 
 	<div class="panel panel-info">
