--- a/app/views/customers/favorite.html.erb
+++ b/app/views/customers/favorite.html.erb
@@ -1,7 +1,7 @@
 <div class="form-box">
 <div class="container">
 <div class="row">
-
+	<!-- ログイン者のお気に入り一覧画面 -->
 	<div class="favorite-index-title">お気に入り (<%= @favorites.count %>件)</div>
 
 	<div class="flex-blog">
