--- a/app/views/blogs/search.html.erb
+++ b/app/views/blogs/search.html.erb
@@ -4,31 +4,21 @@
 
 
     <h2 class="index-title"><%= params[:genre] %> (全<%= @count %>件)</h2>
+
+    <div class="search-title">
+      <%= form_tag(blogs_search_path, :method => 'get') do %>
+          <%= text_field_tag :search_title %>
+          <%= submit_tag '店名検索', :name => nil, class: 'search-title-bt' %>
+        <% end %>
+    </div>
+
       <div class="search-var-style">
-        <%= render 'search' %>
+        <%= render 'search' %><!-- 検索パネル -->
         <div class="blog-index-newbt"><%= link_to " 新規投稿", new_blog_path, class: 'btn btn-info' %></div>
       </div>
 
       <div class="flex-blog">
-        <% @blogs.each do |blog| %>
-          <div class="flex-blog-content">
-
-            <% if blog.blog_images.present? %>
-              <div class="b">
-                <% blog.blog_images.each do |image| %>
-                  <%= attachment_image_tag image, :photo, class: "blog-photo-index" %>
-                <% end %>
-              </div>
-            <% else %>
-              <%= image_tag 'IMG_2667 2.jpeg', class: "blog-photo-index" %>
-            <% end %>
-
-            <%= link_to blog_path(blog) do %>
-              <div class="index-blog-title"><%= blog.title %></div>
-                <div class="index-blog-address"><%= blog.address %></div>
-            <% end %>
-          </div>
-        <% end %>
+        <%= render 'index', blogs: @blogs %><!-- 投稿一覧テンプレート -->
       </div>
       <div class="paginate-style">
         <%= paginate @blogs %>
