--- a/app/views/blogs/_index.html.erb
+++ b/app/views/blogs/_index.html.erb
@@ -9,7 +9,7 @@
 				<% end %>
 			</div>
 		<% else %>
-			 <%= image_tag 'IMG_2667_2.jpeg', class: "blog-photo-index" %>
+			 <%= image_tag 'IMG_2667_2.jpg', class: "blog-photo-index" %>
 		<% end %>
 
 		<%= link_to blog_path(blog) do %>
